RESOLVED FIXED307008
Block JS initiated mainframe navigations while safe browsing warning is displayed
https://bugs.webkit.org/show_bug.cgi?id=307008
Summary Block JS initiated mainframe navigations while safe browsing warning is displ...
Charlie Wolfe
Reported 2026-02-04 16:05:57 PST
...
Attachments
Charlie Wolfe
Comment 1 2026-02-04 16:05:58 PST
Charlie Wolfe
Comment 2 2026-02-04 16:08:04 PST
EWS
Comment 3 2026-02-05 21:25:59 PST
Committed 306922@main (e97a970f4f18): <https://commits.webkit.org/306922@main> Reviewed commits have been landed. Closing PR #57900 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.