Block JS initiated mainframe navigations while safe browsing warning is displayed https://bugs.webkit.org/show_bug.cgi?id=307008 rdar://167596435

Reviewed by Pascoe.

When a safe browsing warning is shown and JavaScript tries to navigate via location.href, the page would
incorrectly close. This happened because the new navigation lead to the warning view being cleared, whose
dealloc called the completion handler with ContinueUnsafeLoad::No.

Fix by blocking non-API-initiated main frame navigations in decidePolicyForNavigationAction while a
browsing warning is displayed.

Test: Tools/TestWebKitAPI/Tests/WebKitCocoa/SafeBrowsing.mm
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::decidePolicyForNavigationAction):
* Source/WebKit/UIProcess/ios/PageClientImplIOS.h:
* Source/WebKit/UIProcess/ios/PageClientImplIOS.mm:
(WebKit::PageClientImpl::hasBrowsingWarning const):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SafeBrowsing.mm:
(TEST(SafeBrowsing, NavigationFromWarningPage)):
(TEST(SafeBrowsing, SetTimeoutNavigationFromWarningPage)):

Canonical link: https://commits.webkit.org/306922@main